jpro correction