@@ -3,4 +3,6 @@ open module fxglplatformer.main {
     requires com.almasb.fxgl.all;
     requires jpro.webapi;
     requires java.desktop;
+    //Compiler option (Setting) add for Module Fxglplatformer??
+    //--add-exports java.desktop/sun.awt.image=ALL-UNNAMED
 }
